# template-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Taskfile.yml
.cargo/: config.toml
.github/workflows/: docker.yml  rust.yml
cli/: Cargo.toml  Dockerfile  k8s.yaml
cli/src/: args.rs  cmd.rs  main.rs
cli/src/args/: tracing.rs
cli/src/cmd/: logs.rs  mercury.rs  metrics.rs  wait.rs
event/: Cargo.toml
event/examples/: notify.rs
event/src/: filewatch.rs  lib.rs  signal.rs
telemetry/: Cargo.toml  README.md
telemetry/src/: lib.rs  lines.rs  otel.rs
tracing/: Cargo.toml  README.md
tracing/src/: console.rs  lib.rs  lines.rs  otel.rs
