[package]
name = "template-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1.1.9"
clap = { version = "4", features = ["derive", "env"] }
enum_dispatch = "0.3"
pbar-telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
