[package]
name = "template-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive", "env"] }
enum_dispatch = "0.3"
humantime = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-pbar = { path = "../tracing" }
event-pbar = { path = "../event" }
