[package]
name = "event-pbar"
version = "0.1.0"
edition = "2021"
description = "Ready-to-use signal and killswitch handling"
license = "MIT"

[features]
default = ["signal", "filewatch", "tokio"]
signal = ["dep:signal-hook"]
filewatch = ["dep:notify-debouncer-full"]
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1"
bon = "2"
camino = "1"
futures = "0.3"
notify-debouncer-full = { version = "0.5", optional = true }
signal-hook = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "signal"], optional = true }
tracing = "0.1"

[dev-dependencies]
rstest = "0.25"
