[package]
name = "pbar-telemetry"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["lines", "otel", "console"]
lines = []
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
console = ["dep:console-subscriber"]

[dependencies]
anstream = "0.6"
anyhow = "1"
bon = "2"
camino = "1"
console-subscriber = { version = "0.4", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", optional = true }
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26", optional = true }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1"
tracing-glog = { version = "0.4", features = ["local-time"] }
tracing-log = "0.2"
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
