[package]
name = "tracing-pbar"
version = "0.1.0"
edition = "2021"
description = "Ready-to-use tracing config"
license = "MIT"

[features]
default = ["lines"]
full = ["lines", "otel", "console"]
lines = []
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
console = ["dep:console-subscriber"]

[dependencies]
anstream = "0.6"
anyhow = "1"
bon = "2"
camino = "1"
console-subscriber = { version = "0.4", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"], optional = true }
opentelemetry-stdout = "0.26.0"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-glog = { version = "0.4", features = ["local-time"] }
tracing-log = "0.2"
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
