[package]
name = "tracing-pbar"
version = "0.1.0"
edition = "2021"
description = "Ready-to-use tracing config"
license = "MIT"

[features]
default = ["lines"]
full = ["lines", "otel", "console"]
lines = ["dep:tracing-appender", "dep:tracing-glog"]
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry-stdout", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
console = ["dep:console-subscriber"]

[dependencies]
anstream = "0.6"
anyhow = "1"
bon = "2"
camino = "1"
console-subscriber = { version = "0.4", optional = true }
opentelemetry = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"], optional = true }
opentelemetry-stdout = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1"
tracing-appender = { version = "0.2", optional = true }
tracing-glog = { version = "0.4", features = ["local-time"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
